# plugin-native

./: .gitignore  CMakeLists.txt  README.md
discordpp/: field.hh  objects-fwd.hh  objects.hh  plugin-endpoints.hh  plugin-native.hh  plugin-template.hh
discordpp/categories/: application-commands.hh  applicationcmds.hh  audit-log.hh  channel.hh  emoji.hh  guild-template.hh  guild.hh  invite.hh  receiving-and-responding.hh  stage-instance.hh  sticker.hh  user.hh  voice.hh  webhook.hh
discordpp/endpoints/: application-commands.hh  audit-log.hh  channel.hh  emoji.hh  guild-scheduled-event.hh  guild-template.hh  guild.hh  invite.hh  receiving-and-responding.hh  stage-instance.hh  sticker.hh  user.hh  voice.hh  webhook.hh
discordpp/macros/: defineObjectOpen.hh
discordpp/objects/: application-commands.hh  application.hh  audit-log.hh  certified-devices.hh  channel.hh  emoji.hh  gateway.hh  guild-scheduled-event.hh  guild-template.hh  guild.hh  invite.hh  message-components.hh  oauth2.hh  permissions.hh  receiving-and-responding.hh  stage-instance.hh  sticker.hh  teams.hh  user.hh  voice.hh  webhook.hh
discordpp/objects_fwd/: application-commands_fwd.hh  application_fwd.hh  audit-log_fwd.hh  certified-devices_fwd.hh  channel_fwd.hh  emoji_fwd.hh  gateway_fwd.hh  guild-scheduled-event_fwd.hh  guild-template_fwd.hh  guild_fwd.hh  invite_fwd.hh  message-components_fwd.hh  oauth2_fwd.hh  permissions_fwd.hh  receiving-and-responding_fwd.hh  stage-instance_fwd.hh  sticker_fwd.hh  teams_fwd.hh  user_fwd.hh  voice_fwd.hh  webhook_fwd.hh
discordpp/util/: defineObjectClose.hh  defineObjectOpen.hh
